[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Simon De Thuin <sdethuin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.13"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
claims = "0.7"
fake = "~2.3"
once_cell = "1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-log = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"


[dependencies.sqlx]
version = "0.6"
features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
wiremock = "0.5"
