[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Simon De Thuin <sdethuin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
log = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1"
serde-aux = "4"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7.1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7.0"
fake = "~2.3.0"
linkify = "0.9"
once_cell = "1.7.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.61"
wiremock = "0.5"
