[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Simon De Thuin <sdethuin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-lab = "0.19"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
log = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1"
serde-aux = "4"
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.7"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
fake = "2"
linkify = "0.9"
once_cell = "1.7"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"
